add unit tests and refactor swagger creation
